feat: instalando biblioteca

--- a/hub-sw_front/package.json
+++ b/hub-sw_front/package.json
@@ -12,8 +12,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "axios": "^1.11.0",
-    "vue": "^3.5.18"
+    "sass": "^1.91.0",
+    "vue": "^3.5.18",
+    "vuetify": "^3.9.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
