--- a/hub-sw_front/package.json
+++ b/hub-sw_front/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.11.0",
     "sass": "^1.91.0",
     "vue": "^3.5.18",
+    "vue3-google-login": "^2.0.34",
     "vuetify": "^3.9.6"
   },
   "devDependencies": {
