--- a/hub-sw_front/package.json
+++ b/hub-sw_front/package.json
@@ -12,12 +12,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.0",
     "@mdi/font": "^7.4.47",
     "axios": "^1.11.0",
+    "material-design-icons-iconfont": "^6.7.0",
     "sass": "^1.91.0",
     "vue": "^3.5.18",
+    "vue-router": "^4.5.1",
     "vue3-google-login": "^2.0.34",
-    "vuetify": "^3.9.6"
+    "vuetify": "^3.9.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
